--- a/With_Email/src/main/resources/application.properties
+++ b/With_Email/src/main/resources/application.properties
@@ -1,4 +1,1 @@
-spring.application.name=SpringSec
-
-spring.security.user.name=root
-spring.security.user.password=root
+spring.application.name=Auth
