--- a/.env
+++ b/.env
@@ -8,4 +8,4 @@ JWT_SECRET_KEY=30YZ7RyjMWvtv0XBvihDlm0BM7mdpOsIpYp6nEic214
 
 ## mail properties
 SUPPORT_EMAIL=yorakotosandratana@gmail.com
-APP_PASSWORD=bpgc kwdw xqmv omnq
+APP_PASSWORD=bpgckwdwxqmvomnq
