--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=Auth
+
 # Database configuration
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
@@ -13,9 +14,12 @@ security.jwt.expiration-time=3600000
 # Mail properties
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username==${SUPPORT_EMAIL}
-spring.mail.password==${APP_PASSWORD}
+spring.mail.username=${SUPPORT_EMAIL}
+spring.mail.password=${APP_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+# Charger ton .env automatiquement (Spring Boot 3.1+)
 spring.config.import=optional:file:.env[.properties]
+
+
